Комментарий к системе
На форму GUI добавлено поле "комментарий". Предназначено для краткого описания системы, например, указание ее места расположения. Данные из поля передаются на серверную часть.