@@ -7,20 +7,22 @@ import ru.pel.usbddc.entity.SystemInfo;
 import ru.pel.usbddc.entity.USBDevice;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 @Setter
 public class SystemInfoDto {
     private OSInfo osInfo;
     private String uuid;
+    private String comment;
     private List<USBDevice> usbDeviceList;
 
-    public SystemInfoDto(final SystemInfo systemInfo){
+    public SystemInfoDto(final SystemInfo systemInfo) {
         this.osInfo = systemInfo.getOsInfo();
         this.uuid = systemInfo.getUuid();
-        this.usbDeviceList = systemInfo.getUsbDeviceMap().values().parallelStream().collect(Collectors.toList());
+        this.comment = systemInfo.getComment();
+        this.usbDeviceList = systemInfo.getUsbDeviceMap().values().parallelStream().toList();
     }
 
-    public SystemInfoDto(){}
+    public SystemInfoDto() {
+    }
 }
